--- a/labourmanagement/src/main/resources/application.properties
+++ b/labourmanagement/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/LabourManagement
 spring.datasource.username=postgres
 spring.datasource.password=4504
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+update//
+spring.jpa.show-sql=false  
+true//
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
+server.error.whitelable.enabled=false
+
+
+#spring.datasource.initialization-mode=always
+#spring.datasource.initialize=true
